# zmesh

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile  conf.py  index.rst  mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/Api/: index_classes.md  index_namespaces.md
docs/docs/Api/Classes/: classzmesh_1_1core_1_1_base_circulator.md  classzmesh_1_1core_1_1_base_iterator.md  classzmesh_1_1core_1_1_base_property.md  classzmesh_1_1core_1_1_base_range.md  classzmesh_1_1core_1_1_edge_handle.md  classzmesh_1_1core_1_1_edge_property_handle.md  classzmesh_1_1core_1_1_face_handle.md  classzmesh_1_1core_1_1_face_property_handle.md  classzmesh_1_1core_1_1_halfedge_handle.md  classzmesh_1_1core_1_1_halfedge_property_handle.md  classzmesh_1_1core_1_1_handle.md  classzmesh_1_1core_1_1_mesh.md  classzmesh_1_1core_1_1_mesh_kernel.md  classzmesh_1_1core_1_1_mesh_kernel_1_1_property_names.md  classzmesh_1_1core_1_1_property.md  classzmesh_1_1core_1_1_property_container.md  classzmesh_1_1core_1_1_property_handle.md  classzmesh_1_1core_1_1_property_kernel.md  classzmesh_1_1core_1_1_smart_edge_handle.md  classzmesh_1_1core_1_1_smart_face_handle.md  classzmesh_1_1core_1_1_smart_halfedge_handle.md  classzmesh_1_1core_1_1_smart_vertex_handle.md  classzmesh_1_1core_1_1_vertex_handle.md  classzmesh_1_1core_1_1_vertex_property_handle.md  classzmesh_1_1io_1_1_base_reader.md  classzmesh_1_1io_1_1_obj_reader.md  structzmesh_1_1core_1_1_edge_around_face_trait.md  structzmesh_1_1core_1_1_edge_around_vertex_trait.md  structzmesh_1_1core_1_1_face_around_face_trait.md  structzmesh_1_1core_1_1_face_around_vertex_trait.md  structzmesh_1_1core_1_1_face_center_trait.md  structzmesh_1_1core_1_1_halfedge_around_face_trait.md  structzmesh_1_1core_1_1_incoming_halfedge_around_vertex_trait.md  structzmesh_1_1core_1_1_mesh_kernel_1_1_edge_topology.md  structzmesh_1_1core_1_1_mesh_kernel_1_1_face_topology.md  structzmesh_1_1core_1_1_mesh_kernel_1_1_halfedge_topology.md  structzmesh_1_1core_1_1_mesh_kernel_1_1_vertex_topology.md  structzmesh_1_1core_1_1_outgoing_halfedge_around_vertex_trait.md  structzmesh_1_1core_1_1_vertex_around_face_trait.md  structzmesh_1_1core_1_1_vertex_around_vertex_trait.md  (+2 more)
docs/docs/Api/Namespaces/: namespacezmesh.md  namespacezmesh_1_1core.md  namespacezmesh_1_1io.md
docs/docs/Tutorials/: 配置环境.md
docs/source/: conf.py  index.rst
docs/source/md/: introduction.md
include/zmesh/: util.h  zmesh.h
include/zmesh/algo/: bbox.h  normals.h
include/zmesh/core/: circulators.h  handles.h  iterators.h  mesh.h  mesh_kernel.h  properties.h  property_kernel.h  smart_handles.h  types.h
include/zmesh/gl/: arcball_window.h  base_window.h  callbacks.h  log_system.h  log_window.h  mesh_window.h  mesh_window_builder.h  shader.h  trackball_camera.h
include/zmesh/io/: base_reader.h  io.h  io_options.h  obj_reader.h  obj_writer.h
shaders/: phong.frag  phong.vert
src/: main.cpp
src/core/: mesh.cpp  mesh_kernel.cpp  smart_handles.cpp
src/gl/: arcball_window.cpp  base_window.cpp  log_system.cpp  log_window.cpp  mesh_window.cpp  mesh_window_builder.cpp
src/io/: io.cpp
tests/: CMakeLists.txt  test_iterator.cpp
